--- a/src/components/home/best sellers/BestSellers.module.css
+++ b/src/components/home/best sellers/BestSellers.module.css
@@ -44,4 +44,8 @@
         height: 30vh;
 
     }
+
+    .best-sellers button {
+        font-size: 1.8rem;
+    }
 }
