--- a/src/components/home/welcome section/Welcome.module.css
+++ b/src/components/home/welcome section/Welcome.module.css
@@ -61,11 +61,11 @@
         z-index: 4;
         position: absolute;
         left: 10px;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
     }
 
     .nemo {
-        font-size: 4rem;
+        font-size: 5rem;
     }
 
 }
