--- a/src/components/home/why choose us/WhyChooseUs.module.css
+++ b/src/components/home/why choose us/WhyChooseUs.module.css
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     font-weight: 600;
     word-spacing: -5px;
 }
