--- a/src/components/navigation/upper navbar/search/Search.module.css
+++ b/src/components/navigation/upper navbar/search/Search.module.css
@@ -4,7 +4,7 @@
 
 .search-form input {
     height: 50px;
-    width: 20vw;
+    width: 25vw;
     color: white;
     background-color: #272034;
     border: 1px solid rgba(118, 69, 216, 1);
