--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,15 @@
     box-sizing: border-box;
 }
 
+
 * {
     margin: 0;
 }
 
+
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
     width: 100vw;
 }
 
@@ -223,6 +224,10 @@ button:disabled:hover {
 
 .fa-check {
     margin-left: 10px;
+}
+
+html>* {
+    width: 100%;
 }
 
 @media screen and (max-width: 500px) {
